[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/background-v1.png" type="Texture" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -6.7348
margin_top = -4.04086
margin_right = 1825.27
margin_bottom = 1216.96
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemoryGameButton" type="Button" parent="."]
margin_left = 272.265
margin_top = 61.8323
margin_right = 452.265
margin_bottom = 151.832
text = "Play Memory Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EggYeeterButton" type="Button" parent="."]
margin_left = 272.0
margin_top = 162.324
margin_right = 452.0
margin_bottom = 252.324
text = "Play Egg Yeeter"

[node name="FlappyBirdButton" type="Button" parent="."]
margin_left = 272.0
margin_top = 262.135
margin_right = 452.0
margin_bottom = 352.135
text = "Play Flappy Bird"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MemoryGameButton" to="." method="_on_MemoryGameButton_pressed"]
[connection signal="pressed" from="EggYeeterButton" to="." method="_on_EggYeeterButton_pressed"]
[connection signal="pressed" from="FlappyBirdButton" to="." method="_on_FlappyBirdButton_pressed"]
